<resources>
    <string name="app_name">NewTaste</string>
    <string name="card_name">card name</string>
    <string name="card_desc">card description name</string>
    <string-array name="recipe">
        <item>"https://cookpad.com/id/cari/nasi%20goreng"</item>
        <item>"https://cookpad.com/id/cari/mie%20goreng"</item>
        <item>"https://cookpad.com/id/cari/bakso"</item>
        <item>"https://cookpad.com/id/cari/rendang"</item>
        <item>"https://cookpad.com/id/cari/gulai"</item>
        <item>"https://cookpad.com/id/cari/sate%20lilit"</item>
        <item>"https://cookpad.com/id/cari/bakwan"</item>
        <item>"https://cookpad.com/id/cari/betutu"</item>
        <item>"https://cookpad.com/id/cari/lumpia"</item>
        <item>"https://cookpad.com/id/cari/hamburger"</item>
    </string-array>
    <string-array name="additional_info">
        <item>
            Nasi goreng adalah makanan jalanan populer di Asia. Di beberapa negara Asia, restoran-restoran kecil, gerai-gerai pinggir jalan dan pedagang keliling mengkhususkan diri dalam menyajikan nasi goreng. Di kota-kota Indonesia, pedagang umum nasi goreng biasa ditemukan berpindah-pindah dengan gerobak makanan mereka dan berhenti di jalanan sibuk atau kawasan tempat tinggal. Beberapa gerai makanan Asia Tenggara menawarkan nasi goreng dengan pilihan rasa dan hidangan sampingan.
        </item>
        <item>
            Di Malaysia, sajian mi ini bisa Anda temukan di pasar, atau di pinggir jalan. Mereka dijual oleh pedagang kaki lima atau pedagang asongan, terutama orang India-Malaysia
        </item>
        <item>
            Dalam proses pembuatannya, ada bakso yang dicampur dengan boraks atau bleng untuk membuat tepung menjadi lebih kenyal mirip daging serta lebih awet. Hal ini membuat bakso pernah dianggap makanan yang kurang aman oleh BPOM. BPOM mengingatkan bahwa mengonsumsi makanan berkadar boraks tinggi selama kurun 5-10 tahun dapat meningkatkan risiko kanker hati.Maka bakso yang dijual di berbagai pasar tradisional dan pasar swalayan diwajibkan bebas boraks.
            Karena bakso terbuat dari daging, maka sebaiknya bakso disimpan dalam kondisi beku sebelum direbus untuk dikonsumsi. Karena alasan itulah di supermarket bakso dijual dalam kondisi beku untuk menjaga temperatur agar bakso dapat terjaga kualitasnya dan tidak tercemar bakteri. Bakso yang dijual tetapi dipajang di etalase pada temperatur ruang rawan tercemar bakteri, misalnya bakteri penyebab diare atau salmonela penyebab tifus. Pilihlah bakso yang tengah direbus.
        </item>
        <item>
            Pada 2011, rendang pernah dinobatkan sebagai hidangan yang menduduki peringkat pertama daftar World 50 Most Delicious Foods (50 Hidangan Terlezat Dunia) versi CNN International.Pada 2018, rendang secara resmi ditetapkan sebagai salah satu dari lima hidangan nasional Indonesia.
        </item>
        <item>
            Gulai adalah salah satu bumbu hidangan dasar yang paling dikenal dalam Masakan Minangkabau, kuah gulai yang berwarna kuning ini menjadi bumbu dan memberikan cita rasa bagi berbagai macam hidangan yang disajikan di rumah makan Padang. Kuah atau bumbu gulai biasanya kental dalam hidangan Minangkabau, Palembang, dan Aceh, akan tetapi di Jawa kuah gulai lebih cair menjadi semacam sup yang dihidangkan panas-panas yang berisi daging atau jeroan kambing.
        </item>
        <item>
            Sebagai pulau dengan mayoritas pemeluk agama Hindu, daging babi atau ikan lebih menjadi pilihan, dan daging sapi awalnya jarang dikonsumsi di Bali. Namun untuk memenuhi konsumen yang tidak mengkonsumsi daging babi seperti warga Muslim, di rumah makan Bali yang berada di luar Bali, sate lilit sering menggunakan daging ayam atau sapi sebagai pengganti. Di pusat-pusat perikanan Bali, seperti desa Kusamba, yang menghadap ke Selat Nusa Penida, sate lilit yang terbuat dari ikan sangat disukai</item>
        <item>
            Kata bakwan sebenarnya berasal dari Tiongkok yang terlihat jelas pada kata bak yang berarti  daging  dan wan yang berarti  bola . Penggunaan kata bak  ini serupa dengan makanan lain yang memiliki asal dan bahan yang sama seperti bakpao (roti isi daging), bakso (bola daging), bakmi (mi daging), bakpia (kue daging kacang hijau), dan bacang (daging cacah).</item>
        <item>
            Menurut tradisi Bali, ayam betutu biasanya disajikan pada saat upacara adat seperti odalan, otonan, maupun pernikahan.Selain itu, betutu digunakan sebagai sajian pada upacara keagamaan dan upacara adat serta sebagai hidangan dan dijual. Konsumennya tidak hanya masyarakat Bali, tetapi juga tamu mancanegara yang datang ke Bali, khususnya pada tempat-tempat tertentu seperti di hotel dan rumah makan atau restoran</item>
        <item>
            Gulungan berbentuk silinder berwarna emas ini melambangkan kekayaan dan merupakan emas batangan. Lumpia merupakan hidangan yang wajib ada selama Festival Musim Semi di Tiongkok karena dipercaya akan mendatangkan kekayaan dan kemakmuran .</item>
        <item>
            Hamburger mentah mungkin mengandung bakteri berbahaya yang bisa menyebabkan penyakit bawaan makanan seperti Escherichia coli O157:H7, karena kadang-kadang proses penyiapan daging yang tidak tepat, sehingga diperlukan kehati-hatian saat menangani dan memasak. Karena potensi penyakit yang ditularkan melalui makanan, USDA merekomendasikan hamburger dimasak dengan suhu internal 160 F ( 71 C ). Jika dimasak di suhu tersebut, maka dianggap matang.</item>
    </string-array>
    <string name="new_taste">New Taste</string>
    <string name="liangga_ristiana">Liangga Ristiana</string>
    <string name="email">liangga4@gmail.com</string>
    <string name="about_me">I\'m an undergraduate college student majoring in Information Technology at Udayana University with a
keen interest in both mobile and web development. I find great excitement in mastering Next.js, Node.js,
and React for web development, as well as Flutter for mobile development. My passion for creating
innovative and efficient digital solutions drives my continuous learning and growth in the tech industry</string>
    <string-array name="data_title">
        <item>Nasi Goreng</item>
        <item>Mie Goreng</item>
        <item>Bakso</item>
        <item>Rendang</item>
        <item>Gulai</item>
        <item>Sate Lilit</item>
        <item>Bakwan</item>
        <item>Ayam Betutu</item>
        <item>Lumpia</item>
        <item>Burger</item>
    </string-array>
</resources>